# y0-bio

./: .bumpversion.cfg  .flake8  CONTRIBUTING.rst  README.md  setup.cfg  setup.py  tox.ini
data/: blood-glucose.bib  emmaa  english_statements.pickle  mitre-drug-virus.txt  pmid_indra.pickle
data/Q1/: Q1-cell-tropisim.Page1.google-scholar.2021-06-22.bib  SciFact _ The levels of ACE2 and TMPRSS2 are relatively low in ciliated epithelial cells and AT2 cells.html
data/Q1/SciFact _ The levels of ACE2 and TMPRSS2 are relatively low in ciliated epithelial cells and AT2 cells_files/: main.bb2e65aa.chunk.js
data/Q2/: Q2-BBB.Page1.2021-06-22.google-scholar.bib  SciFact _ SARS-CoV-2 infects the brain.html
data/Q2/SciFact _ SARS-CoV-2 infects the brain_files/: main.545761ad.chunk.css  theme.min.css
data/Q3/: Q3-antibody-escape.Page1.google-scholar.2021-06-22.bib
data/Q4/: Q4.Page1.google-scholar.2021-06-22.bib  SciFact _ Apilimod is a PIKfyve inhibitor.html
data/Q4/SciFact _ Apilimod is a PIKfyve inhibitor_files/: 2.6349c59e.chunk.js
data/Q5/: Q5-Long-Covid.Page1.google-scholar.2021-06-22.bib  SciFact _ Long COVID patients have symptoms for months after initial infection.html  SciFact _ Upon vaccination, so called Long-COVID patients are finding relief from symptoms that have lasted for months after their initial infection..html
data/Q5/SciFact _ Upon vaccination, so called Long-COVID patients are finding relief from symptoms that have lasted for months after their initial infection._files/: init.min.js
data/Q6/: Q6.bib  Q6.citation-hop-1.bib
docs/: Makefile
docs/source/: bel.rst  cli.rst  conf.py  index.rst  installation.rst
notebooks/: CoaglationCascade.ipynb  Glucose_and_COVID.ipynb  Looking-for-ACE2-angiotensin-relationships.ipynb  Q3.ipynb  SciFact.ipynb  covid_claims.nodelink.json  curated_claims.csv  logette.pickle  mitre_drug_virus_claims.csv  mitre_drug_virus_claims.nodelink.json  mitre_drug_virus_claims.tsv  q1-cell-tropisim.bib  q2-bbb.bib  q6.bib
src/y0_bio/: __init__.py  __main__.py  cli.py  version.py
src/y0_bio/io/: __init__.py  bel.py
src/y0_bio/resources/: __init__.py  covid_example.bel.nodelink.json
tests/: __init__.py  test_version.py
tests/io/: __init__.py  test_bel.py
