##########################
# Setup.py Configuration #
##########################
[metadata]
name = y0_bio
version = 0.0.1-dev
description = Biological applications of y0
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/y0-causal-inference/y0-bio
download_url = https://github.com/y0-causal-inference/y0-bio/releases
project_urls =
    Bug Tracker = https://github.com/y0-causal-inference/y0-bio/issues
    Source Code = https://github.com/y0-causal-inference/y0-bio

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cthoyt
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    y0>=0.0.3
    # Biopragmatics Stack
    pybel
    indra


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    y0_bio = y0_bio.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = y0_bio
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/y0_bio
    .tox/*/lib/python*/site-packages/y0_bio

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
